fix: word-spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*шрифты*/
 @font-face {
   font-family: 'Lato-Bold';
   src: url('assets/fonts/Lato-Bold/Lato-Bold.eot');
@@ -39,7 +38,7 @@ body {
   margin: 0;
 }
 
-/*header*/
+
 .header-wrap {
   width: 100%;
   border-bottom: 6px solid #323746;
@@ -93,8 +92,6 @@ body {
 }
 
 
-
-
 .header-navigation-container {
   margin: 17px 40px 0 auto;
 }
@@ -113,6 +110,7 @@ body {
   align-items: center;
 }
 
+
 .header-navigation-list__link {
   font-size: 12px;
   font-family: 'Lato-Bold';
@@ -128,7 +126,6 @@ body {
   cursor: pointer;
   color: #f06c64;
 }
-
 
 
 .header-navigation-list__item::after {
@@ -147,7 +144,7 @@ body {
   margin: 0;
 }
 
-/*слайдер*/
+
 .slider-wrap {
   background-color: #ff6c64;
 }
@@ -201,7 +198,6 @@ body {
 }
 
 
-
 .slider__item {
   position: relative;
 }
@@ -223,13 +219,13 @@ body {
   left: 425px;
 }
 
+
 .slider__phone:hover {
   cursor: pointer;
   opacity: 0.8;
 }
 
 
-/*сервисы*/
 .services-wrapper {
   border-bottom: 6px solid #ffffff;
   background-color: #f2f2f2;
@@ -257,6 +253,7 @@ body {
   margin: 0 0 43.5px 0;
 }
 
+
 .services__description {
   margin: 0;
   font-size: 18px;
@@ -268,6 +265,7 @@ body {
   color: #767e9e;
   word-spacing: 1px;
 }
+
 
 .services__table {
   display: grid;
@@ -304,9 +302,6 @@ body {
   color: #666d89;
   letter-spacing: -0.1px;
 }
-
-
-
 
 
 .services__table-description-cell {
@@ -389,6 +384,7 @@ body {
 .portfolio-container {
   padding: 59px 40px 67px 40px;
 }
+
 
 .information-specialists-container {
   padding: 59px 40px 32px 40px;
@@ -484,9 +480,11 @@ body {
   grid-gap: 20px;
 }
 
+
 .portfolio-illustration li:nth-child(n+13) {
   display: none;
 }
+
 
 .portfolio-illustration__item:hover {
   cursor: pointer;
@@ -539,9 +537,11 @@ body {
 
 }
 
+
 .list-specialists__item {
   width: 300px;
 }
+
 
 .list-specialists img {
   width: 300px;
@@ -580,9 +580,6 @@ body {
 }
 
 
-
-
-
 .information-specialist__icon-link {
   display: flex;
   align-content: center;
@@ -605,6 +602,7 @@ body {
   background-color: #666d89;
 
 }
+
 
 .information-specialist__icon-link:hover .information-specialist__icon {
   fill: #ffffff;
@@ -636,12 +634,6 @@ body {
   padding: 59px 40px 11px 40px;
   margin: 0 auto;
 }
-
-
-
-
-
-
 
 
 .footer-container {
@@ -715,13 +707,12 @@ body {
   color: #f2888b;
 }
 
+
 .main-form__item:focus {
   outline: 0px solid black;
   border: 1px solid black;
   padding: 10px 10.8px 11px 13.2px;
 }
-
-
 
 
 .main-form__ul:nth-last-child(1) {
@@ -740,9 +731,9 @@ body {
   height: 178px;
 }
 
+
 .main-form__button {
   margin-left: auto;
-
 }
 
 
@@ -750,10 +741,10 @@ body {
   color: #f2888b;
 }
 
+
 .main-form__item::-moz-placeholder {
   color: #f2888b;
 }
-
 
 
 .contacts-information-tittle {
@@ -776,11 +767,7 @@ body {
   color: #f0d8d9;
   line-height: 22px;
   text-align: justify;
-  word-spacing: -2px;
 }
-
-
-
 
 
 .contacts-information__item {
@@ -793,6 +780,7 @@ body {
   color: #f0d8d9;
   text-decoration: none;
 }
+
 
 .main-form__button {
   width: 140px;
@@ -824,14 +812,15 @@ body {
   height: 14px;
 }
 
+
 .contacts-information__address::before {
   background: url("assets/location__footer.png");
   margin: 0px 9px auto 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 7px 11px;
-
 }
+
 
 .contacts-information__phone-number::before {
   background: url("assets/phone__footer.png");
@@ -842,6 +831,7 @@ body {
 
 }
 
+
 .contacts-information__email::before {
   background: url("assets/mail__footer.png");
   margin: 1.3px 10px auto 0;
@@ -849,10 +839,7 @@ body {
   background-position: center;
   background-size: 13px 8px;
   width: 14px;
-
-
 }
-
 
 
 .footer__copyright, .footer__site {
@@ -871,6 +858,7 @@ body {
   padding-left: 2px;
   text-decoration: none;
 }
+
 
 .footer__site:hover {
   text-decoration: underline;
